--- a/WolvenKit/Views/HomePage/Pages/GithubPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/GithubPageView.xaml
@@ -1,19 +1,21 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.GithubPageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf">
+                   xmlns:catel="http://schemas.catelproject.com"
+                   xmlns:hc="https://handyorg.github.io/handycontrol"
+                   xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf">
+
+
+
 
     <Grid hc:ThemeManager.AccentColor="{DynamicResource MahApps.Brushes.Accent3}" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" MinWidth="300" MinHeight="300" >
         <Grid Margin="3,75,3,0">
             <wv2:WebView2 Source="https://github.com/WolvenKit/Wolven-kit"/>
-
         </Grid>
         <Grid HorizontalAlignment="Right" Width="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
-
         <Grid HorizontalAlignment="left" Width="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
         <Grid VerticalAlignment="Top" HorizontalAlignment="Right" Width="30" Height="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5" Orientation="Horizontal">
-
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center " FontSize="20" Text="GitHub"></TextBlock>
             <hc:Divider Margin="15" Orientation="Vertical" Height="45" HorizontalAlignment="Center" VerticalAlignment="Center"></hc:Divider>
             <hc:AnimationPath Height="45" Width="45" Data="{DynamicResource GithubGeometry}" 
@@ -21,7 +23,5 @@
                           Stretch="Uniform" StrokeThickness="1.5"
                           Stroke="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="5" PathLength="70" HorizontalAlignment="Center" VerticalAlignment="Center"></hc:AnimationPath>
         </StackPanel>
-       
     </Grid>
-
 </catel:UserControl>
