--- a/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/CreateUserView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/CreateUserView.xaml
@@ -1,13 +1,14 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.WizardPages.FirstSetupWizard.CreateUserView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:hc="https://handyorg.github.io/handycontrol">
+                   xmlns:catel="http://schemas.catelproject.com"
+                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                   xmlns:hc="https://handyorg.github.io/handycontrol">
 
     <Grid HorizontalAlignment="Stretch" Grid.Row="3" >
         <Grid Margin="5,5,5,5" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Stretch">
             <Grid Grid.Row="1" HorizontalAlignment="Stretch">
                 <StackPanel Margin="0,10,0,0" Orientation="Vertical" VerticalAlignment="Top">
-                    <TextBlock Text="Create User (Optional)"  FontSize="14" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="10,10,0,10"></TextBlock>
                     <Grid Margin="22,0,0,0">
                         <StackPanel>
                             <StackPanel Orientation="Horizontal">
