--- a/WolvenKit/Views/AudioTool/AudioToolView.xaml
+++ b/WolvenKit/Views/AudioTool/AudioToolView.xaml
@@ -1,16 +1,79 @@
 ﻿<catel:DataWindow x:Class="WolvenKit.Views.AudioTool.AudioToolView"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                  xmlns:catel="http://schemas.catelproject.com">
+                  xmlns:catel="http://schemas.catelproject.com"   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" 
+                  xmlns:hc="https://handyorg.github.io/handycontrol" 
+                  ShowInTaskbar="True" 
+                  AllowsTransparency="True" 
+                  ResizeMode="CanResizeWithGrip" 
+                  BorderBrush="{x:Null}" 
+                  WindowStartupLocation="CenterScreen"
+                  WindowStyle="None" 
+                  Title="Code Editor">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        
-        <TextBlock Grid.Row="0" Text="{Binding Title}" />
-        <TextBlock Grid.Row="1" Text="Here goes your real content" />
-    </Grid>
-    
+    <catel:DataWindow.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <hc:ThemeResources/>
+                <hc:Theme/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </catel:DataWindow.Resources>
+
+    <Border hc:ThemeManager.AccentColor="{DynamicResource MahApps.Brushes.Accent3}" Width="auto" Height="auto" BorderBrush="{DynamicResource MahApps.Brushes.Accent4}" BorderThickness="1">
+
+        <Grid Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
+
+            <Grid x:Name="DraggableTitleBar" VerticalAlignment="Top" Grid.ColumnSpan="2" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" MouseLeftButtonDown="DraggableTitleBar_MouseLeftButtonDown">
+
+                <!--TitleBar  Please add onmousedown event to be able to drag the window-->
+                <Button Click="Button_Click" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" BorderBrush="{x:Null}"  HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,5,3" >
+                    <iconPacks:PackIconCodicons   Kind="Close"/>
+                </Button>
+
+                <Button  Click="Button_Click_1" BorderBrush="{x:Null}" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,45,3" >
+                    <iconPacks:PackIconCodicons  Kind="ChromeMinimize"/>
+                </Button>
+
+
+                
+
+                <TextBlock Margin="13,0,0,0" Height="23" Text="Audio Tool"  HorizontalAlignment="Left" VerticalAlignment="Center"/>
+
+            </Grid>
+
+
+
+
+
+            <Grid  Margin="3,33,3,3">
+
+                <StackPanel>
+
+
+                    <Grid>
+                        <ListView>
+                            
+                        </ListView>
+                    </Grid>
+                    <hc:RangeSlider Width="400" Foreground="{DynamicResource MahApps.HamburgerMenu.Pane.Background}" hc:TipElement.Visibility="Visible" hc:TipElement.Placement="Bottom" hc:TipElement.StringFormat="#0.00" ValueEnd="5" TickPlacement="Both" Margin="0,32,0,0"/>
+                    <StackPanel>
+                        <hc:PreviewSlider/>
+                     
+                    </StackPanel>
+
+            
+
+                </StackPanel>
+           
+
+
+
+            </Grid>
+
+
+        </Grid>
+    </Border>
+
+
 </catel:DataWindow>
