--- a/WolvenKit/Views/SettingsPages/SubPages/Editor/CompatibilitySubSettingsView.xaml
+++ b/WolvenKit/Views/SettingsPages/SubPages/Editor/CompatibilitySubSettingsView.xaml
@@ -3,6 +3,7 @@
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
 
+    <AdornerDecorator>
     <Grid hc:ThemeManager.AccentColorElement="{DynamicResource MahApps.Brushes.Accent3}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
@@ -48,7 +49,7 @@
                         
                         <Grid Margin="5">
                             <TextBlock Text="Executable Path" VerticalAlignment="Center" Margin="0,0,50,0"/>
-                            <Button HorizontalAlignment="Right" Margin="0,0,250,0">
+                            <Button HorizontalAlignment="Right" Margin="0,0,250,0" Click="ExecutablePathBtn_Click">
                                 <iconPacks:PackIconCodicons Kind="FolderOpened"/>
                             </Button>
                             <TextBox HorizontalAlignment="Right" Width="250" Text="{Binding ExecutablePath}"/>
@@ -58,7 +59,7 @@
 
                         <Grid Margin="5">
                             <TextBlock Text="WCC_Lite.exe Path" VerticalAlignment="Center" Margin="0,0,50,0"/>
-                            <Button HorizontalAlignment="Right" Margin="0,0,250,0">
+                            <Button HorizontalAlignment="Right" Margin="0,0,250,0" Click="WccLitePathBtn_Click">
                                 <iconPacks:PackIconCodicons Kind="FolderOpened"/>
                             </Button>
                             <TextBox HorizontalAlignment="Right" Width="250" Text="{Binding WccLitePath}"/>
@@ -67,7 +68,7 @@
 
                         <Grid Margin="5">
                             <TextBlock Text="Uncooked Depot Path" VerticalAlignment="Center" Margin="0,0,50,0"/>
-                            <Button HorizontalAlignment="Right" Margin="0,0,250,0">
+                            <Button HorizontalAlignment="Right" Margin="0,0,250,0" Click="DepotPathBtn_Click">
                                 <iconPacks:PackIconCodicons Kind="FolderOpened"/>
                             </Button>
                             <TextBox HorizontalAlignment="Right" Width="250" Text="{Binding DepotPath}"/>
@@ -76,7 +77,7 @@
 
                         <Grid Margin="5">
                             <TextBlock Text="Mods Folder Path" VerticalAlignment="Center" Margin="0,0,50,0"/>
-                            <Button HorizontalAlignment="Right" Margin="0,0,250,0">
+                            <Button HorizontalAlignment="Right" Margin="0,0,250,0" Click="GameModDirBtn_Click">
                                 <iconPacks:PackIconCodicons Kind="FolderOpened"/>
                             </Button>
                             <TextBox HorizontalAlignment="Right" Width="250" Text="{Binding GameModDir}"/>
@@ -85,7 +86,7 @@
 
                         <Grid Margin="5">
                             <TextBlock Text="DLC Folder Path" VerticalAlignment="Center" Margin="0,0,50,0"/>
-                            <Button HorizontalAlignment="Right" Margin="0,0,250,0">
+                            <Button HorizontalAlignment="Right" Margin="0,0,250,0" Click="GameDlcDirBtn_Click">
                                 <iconPacks:PackIconCodicons Kind="FolderOpened"/>
                             </Button>
                             <TextBox HorizontalAlignment="Right" Width="250" Text="{Binding GameDlcDir}"/>
@@ -103,6 +104,7 @@
 
 
     </Grid>
+    </AdornerDecorator>
 
 
 </catel:UserControl>
