AudioToolDesign And MVVM headaches

--- a/WolvenKit/Views/Wizards/FirstSetupWizardView.xaml
+++ b/WolvenKit/Views/Wizards/FirstSetupWizardView.xaml
@@ -49,7 +49,9 @@
 
         <Grid Grid.Row="2"  VerticalAlignment="Bottom" Height="95" Margin="0,0,0,0">
 
-            <Button  Margin="3" Width="50" Height="30" VerticalAlignment="Bottom" IsEnabled="True" hc:IconElement.Geometry="{StaticResource LeftGeometry}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" BorderBrush="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Left" Click="Button_Click_1"/>
+            <Button  Margin="3" Width="50" Height="30" VerticalAlignment="Bottom" IsEnabled="True"  Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" BorderBrush="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Left" Click="Button_Click_1">
+                <iconPacks:PackIconCodicons Kind="ArrowLeft"/>
+            </Button>
             <hc:StepBar x:Name="StepMain" Margin="50,0,50,3" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Dock="Bottom"  >
                 <hc:StepBarItem Content="Create User (Optional)" />
                 <hc:StepBarItem Content="Select Theme"/>
@@ -58,7 +60,9 @@
                 <hc:StepBarItem Content="Finalize Setup"/>
 
             </hc:StepBar>
-            <Button  Command="{Binding NextCmd}" CommandParameter="{Binding ElementName=StepMain}" Margin="3" VerticalAlignment="Bottom" Height="30" Width="50" IsEnabled="True" hc:IconElement.Geometry="{StaticResource RightGeometry}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" BorderBrush="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Right" Click="Button_Click"/>
+            <Button  Command="{Binding NextCmd}" CommandParameter="{Binding ElementName=StepMain}" Margin="3" VerticalAlignment="Bottom" Height="30" Width="50" IsEnabled="True"  Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" BorderBrush="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Right" Click="Button_Click">
+                <iconPacks:PackIconCodicons Kind="ArrowRight"/>
+            </Button>
 
         </Grid>
 
