--- a/WolvenKit/Views/AudioTool/AudioToolView.xaml
+++ b/WolvenKit/Views/AudioTool/AudioToolView.xaml
@@ -361,20 +361,20 @@
                                 <Grid>
                                     <hc:PreviewSlider Margin="125,0,125,0" Style="{StaticResource PreviewSliderBaseStyle}">
                                         <hc:PreviewSlider.PreviewContent>
-                                            <Label Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}" Style="{StaticResource LabelPrimary}" Content="{Binding Path=(hc:PreviewSlider.PreviewPosition),RelativeSource={RelativeSource Self}}" ContentStringFormat="#0.00"/>
+                                            <Label Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}" Style="{StaticResource LabelPrimary}" Content="{Binding Path=CurrentPlayerTime}" ContentStringFormat="#0.00"></Label>
                                         </hc:PreviewSlider.PreviewContent>
                                     </hc:PreviewSlider>
 
                                     <StackPanel Margin="15,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Orientation="Horizontal">
-                                        <Button Margin="0" Background="Transparent" BorderBrush="Transparent">
+                                        <Button Click="PlayButton_Click" Margin="0" Background="Transparent" BorderBrush="Transparent">
                                             <iconPacks:PackIconBootstrapIcons Kind="Play"/>
                                         </Button>
                                         <hc:Divider LineStroke="{DynamicResource MahApps.Brushes.Accent3}" Orientation="Vertical" Height="10"/>
-                                        <Button Margin="0" Background="Transparent" BorderBrush="Transparent">
+                                        <Button Click="PauseButton_Click" Margin="0" Background="Transparent" BorderBrush="Transparent">
                                             <iconPacks:PackIconBootstrapIcons Kind="Pause"/>
                                         </Button>
                                         <hc:Divider LineStroke="{DynamicResource MahApps.Brushes.Accent3}" Orientation="Vertical" Height="10"/>
-                                        <Button Margin="0" Background="Transparent" BorderBrush="Transparent">
+                                        <Button Click="StopButton_Click" Margin="0" Background="Transparent" BorderBrush="Transparent">
                                             <iconPacks:PackIconBootstrapIcons Kind="Stop"/>
                                         </Button>
                                     </StackPanel>
@@ -388,8 +388,7 @@
                           ShowSubSeconds="True"
                           HorizontalAlignment="Right"
                           Margin="0,3,15,3"
-                                        Time="{Binding CurrentPlayerTime}"
-                            />
+                                        Time="{Binding Path=CurrentPlayerTime, Mode=OneWay}"/>
 
                                 </Grid>
 
