--- a/WolvenKit/Views/Wizards/WizardPages/ProjectWizard/ProjectConfigurationView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/ProjectWizard/ProjectConfigurationView.xaml
@@ -18,18 +18,20 @@
                     <TextBlock Text="Project Configuration"  FontSize="14" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="10,10,0,10"></TextBlock>
                     
                     <Grid Margin="22,0,0,0" >
-                        <StackPanel>
+                        <AdornerDecorator>
+                            <StackPanel>
 
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock VerticalAlignment="Center" Text="Project Image (Optional)"></TextBlock>
-                                <hc:ImageSelector   Margin="10,0,0,0" Width="100" Height="100"  HorizontalAlignment="Left"/>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock VerticalAlignment="Center" Text="Project Image (Optional)"></TextBlock>
+                                    <hc:ImageSelector   Margin="10,0,0,0" Width="100" Height="100"  HorizontalAlignment="Left"/>
+                                </StackPanel>
+
+                                <TextBox   hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Project Name" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="{Binding ProjectName}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
+                                <TextBox    hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Project Path" Style="{StaticResource TextBoxExtend}" Margin="0,32,50,0" Text="{Binding ProjectPath}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch" VerticalAlignment="Top"/>
+
                             </StackPanel>
-
-                            <TextBox   hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Project Name" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="{Binding ProjectName}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
-                            <TextBox    hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Project Path" Style="{StaticResource TextBoxExtend}" Margin="0,32,50,0" Text="{Binding ProjectPath}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch" VerticalAlignment="Top"/>
-
-                        </StackPanel>
-                        <Button Width="50" Height="34"  Margin="5,5,0,0"  VerticalAlignment="Bottom" HorizontalAlignment="Right">
+                        </AdornerDecorator>
+                        <Button Width="50" Height="34"  Margin="5,5,0,0"  VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="ProjectPathBtn_Click">
                             <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="FolderOpened" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Center" />
 
                         </Button>
