--- a/WolvenKit/Views/Wizards/WizardPages/ProjectWizard/SelectProjectTypeView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/ProjectWizard/SelectProjectTypeView.xaml
@@ -1,6 +1,7 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.WizardPages.ProjectWizard.SelectProjectTypeView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                   xmlns:local="clr-namespace:WolvenKit.Model.Wizards"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
 
     <Grid HorizontalAlignment="Stretch" Grid.Row="3" >
@@ -9,8 +10,8 @@
                             <StackPanel Margin="0,10,0,0" Orientation="Vertical" VerticalAlignment="Top">
                                 <TextBlock Text="Select a Project Type"  FontSize="14" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="10,10,0,10"></TextBlock>
                                 <UniformGrid Margin="22,0,0,0" Rows="2" Columns="1">
-                        <RadioButton  Margin="10,10,0,0" Background="{DynamicResource SecondaryRegionBrush}" Style="{StaticResource RadioButtonIcon}" Content="{Binding WitcherGameName}" IsChecked="{Binding WitcherChecked}"  />
-                        <RadioButton Margin="10,10,0,0" Background="{DynamicResource SecondaryRegionBrush}" Style="{StaticResource RadioButtonIcon}" Content="{Binding CyberpunkGameName}" IsChecked="{Binding CyberpunkChecked}"  />
+                        <RadioButton  Margin="10,10,0,0" Background="{DynamicResource SecondaryRegionBrush}" Style="{StaticResource RadioButtonIcon}" Content="{x:Static local:ProjectWizardModel.WitcherGameName}" IsChecked="{Binding WitcherChecked}"  />
+                        <RadioButton Margin="10,10,0,0" Background="{DynamicResource SecondaryRegionBrush}" Style="{StaticResource RadioButtonIcon}" Content="{x:Static local:ProjectWizardModel.CyberpunkGameName}" IsChecked="{Binding CyberpunkChecked}"  />
                                 </UniformGrid>
                             </StackPanel>
                         </Grid>
